<resources>
    <string name="app_name">Android_Pv-221</string>
    <string name="app_title">Welcome to Android</string>
    <string name="main_btn_calc">Calculator</string>
    <string name="main_btn_game">2048</string>
    <string name="main_btn_anim">Animation</string>
    <string name="main_btn_chat">Chat</string>
    <string name="main_btn_exchange">Exchange</string>

    <!-- region Anim-->
    <string name="anim_tv_alpha">Alpha</string>
    <string name="anim_tv_scale">Scale</string>
    <string name="anim_tv_rotate">Rotate</string>
    <string name="anim_tv_translate">Translate</string>
    <string name="anim_tv_combo">Combo</string>
    <!-- endregion -->

    <!-- region Game-->
    <string name="game_tv_score">SCORE\n%s</string>
    <string name="game_tv_best">BEST\n%s</string>
    <string name="game_tv_new">NEW</string>
    <string name="game_tv_undo">UNDO</string>
    <string name="game_tv_hint">Собирай 2048</string>
    <string name="game_tv_2048">2048</string>
    <!-- endregion -->


    <!-- region Calc -->
    <string name="calc_tv_title">Calculator</string>
    <string name="calc_btn_percent">\u0025</string>
    <string name="calc_btn_ce">CE</string>
    <string name="calc_btn_c">C</string>
    <string name="calc_btn_backspace">\u232B</string>

    <string name="calc_btn_inverse">1/x</string>
    <string name="calc_btn_square">x²</string>
    <string name="calc_btn_sqrt">\u221A</string>
    <string name="calc_btn_divide">\u00F7</string>
    <string name="calc_btn_multiply">\u00D7</string>
    <string name="calc_btn_minus">\u2212</string>
    <string name="calc_btn_plus">\u002B</string>
    <string name="calc_btn_pm">\u00B1</string>
    <string name="calc_btn_coma">.</string>
    <string name="calc_btn_equal">\u003D</string>

    <string name="calc_btn_digit_0">0</string>
    <string name="calc_btn_digit_1">1</string>
    <string name="calc_btn_digit_2">2</string>
    <string name="calc_btn_digit_3">3</string>
    <string name="calc_btn_digit_4">4</string>
    <string name="calc_btn_digit_5">5</string>
    <string name="calc_btn_digit_6">6</string>
    <string name="calc_btn_digit_7">7</string>
    <string name="calc_btn_digit_8">8</string>
    <string name="calc_btn_digit_9">9</string>

    <string name="calc_msg_too_long">Ліміт цифр досягнуто</string>

</resources>
