<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textColor="@color/app_foreground"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <Button
            android:id="@+id/main_btn_calc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_btn_background"
            android:text="@string/main_btn_calc"
            android:textSize="20sp"
            android:layout_marginTop="40dp"
            app:backgroundTint="@null"/>

        <Button
            android:id="@+id/main_btn_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_btn_background"
            android:text="@string/main_btn_game"
            android:textSize="20sp"
            android:layout_marginTop="40dp"
            app:backgroundTint="@null"/>

        <Button
            android:id="@+id/main_btn_anim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_btn_background"
            android:layout_marginTop="40dp"
            android:text="@string/main_btn_anim"
            android:textSize="20sp"
            app:backgroundTint="@null" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>